--- a/APTP_DB_flotting_project/Visualizer.resx
+++ b/APTP_DB_flotting_project/Visualizer.resx
@@ -117,27 +117,6 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="nChartControl1.State" mimetype="application/x-microsoft.net.object.binary.base64">
-    <value>
-        AAEAAAD/////AQAAAAAAAAAMAgAAAFpOZXZyb24uQ2hhcnQuV2luRm9ybSwgVmVyc2lvbj0xNy4xMC41
-        LjEyLCBDdWx0dXJlPW5ldXRyYWwsIFB1YmxpY0tleVRva2VuPWM5YmQ4OTk4ZTk4MWU0ZWUFAQAAABtO
-        ZXZyb24uQ2hhcnQuV2luRm9ybS5OU3RhdGUBAAAAB21fQnl0ZXMHAgIAAAAKCw==
-</value>
-  </data>
-  <data name="nChartControl2.State" mimetype="application/x-microsoft.net.object.binary.base64">
-    <value>
-        AAEAAAD/////AQAAAAAAAAAMAgAAAFpOZXZyb24uQ2hhcnQuV2luRm9ybSwgVmVyc2lvbj0xNy4xMC41
-        LjEyLCBDdWx0dXJlPW5ldXRyYWwsIFB1YmxpY0tleVRva2VuPWM5YmQ4OTk4ZTk4MWU0ZWUFAQAAABtO
-        ZXZyb24uQ2hhcnQuV2luRm9ybS5OU3RhdGUBAAAAB21fQnl0ZXMHAgIAAAAKCw==
-</value>
-  </data>
-  <data name="nChartControl3.State" mimetype="application/x-microsoft.net.object.binary.base64">
-    <value>
-        AAEAAAD/////AQAAAAAAAAAMAgAAAFpOZXZyb24uQ2hhcnQuV2luRm9ybSwgVmVyc2lvbj0xNy4xMC41
-        LjEyLCBDdWx0dXJlPW5ldXRyYWwsIFB1YmxpY0tleVRva2VuPWM5YmQ4OTk4ZTk4MWU0ZWUFAQAAABtO
-        ZXZyb24uQ2hhcnQuV2luRm9ybS5OU3RhdGUBAAAAB21fQnl0ZXMHAgIAAAAKCw==
-</value>
-  </data>
   <data name="ncc_acc.State" mimetype="application/x-microsoft.net.object.binary.base64">
     <value>
         AAEAAAD/////AQAAAAAAAAAMAgAAAFpOZXZyb24uQ2hhcnQuV2luRm9ybSwgVmVyc2lvbj0xNy4xMC41
@@ -159,4 +138,7 @@
         ZXZyb24uQ2hhcnQuV2luRm9ybS5OU3RhdGUBAAAAB21fQnl0ZXMHAgIAAAAKCw==
 </value>
   </data>
+  <metadata name="timer1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>17, 17</value>
+  </metadata>
 </root>
